# GL_Lib

./: .gitignore  CMakeLists.txt  GL_RenderingLib.sln  README.md
GL_Lib/: GL_Lib.vcxproj  GL_Lib.vcxproj.filters  fragment.glsl  solidColorF.glsl  solidColorV.glsl  vertex.glsl
GL_Lib/src/: Input.cpp  Input.h  Renderer.h  Window.cpp  Window.h  animation.cpp  animation.h  base_game.cpp  base_game.h  box.cpp  box.h  camera.cpp  camera.h  collisionManager.cpp  collisionManager.h  core.cpp  core.h  deps.h  entity.cpp  entity.h  first_person_camera.cpp  first_person_camera.h  input.cpp  input.h  lib_time.cpp  lib_time.h  loader.cpp  loader.h  main.cpp  material.h  myMaths.cpp  myMaths.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shape.cpp  shape.h  (+9 more)
GL_Lib/src/Headers/Animation/: animation.h
GL_Lib/src/Headers/Collision/: collisionManager.h
GL_Lib/src/Headers/Core/: base_game.h  window.h
GL_Lib/src/Headers/Dependencies/: deps.h
GL_Lib/src/Headers/Entities/: entity.h  shape.h
GL_Lib/src/Headers/Maths/: myMaths.h  transform.h
GL_Lib/src/Headers/Renderer/: renderer.h  shader.h
GL_Lib/src/Headers/Utils/: Input.h  core.h  lib_time.h  loader.h
GL_Lib/src/Source/Animation/: animation.cpp
GL_Lib/src/Source/Collision/: collisionManager.cpp
GL_Lib/src/camera/: camera.cpp  camera.h  first_person_camera.cpp  first_person_camera.h  third_person_camera.cpp
GL_Lib/src/lighting/: directional_light.cpp  directional_light.h  light.cpp  light.h  lighting_data.h  material.h  material_group.cpp  material_group.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
GL_Lib/src/models/: mesh.cpp  mesh.h  mesh_group.cpp  mesh_group.h  model.cpp  model.h  model_importer.cpp  model_importer.h  shape_group.cpp  shape_group.h
GL_Lib/src/physics/: collisionManager.h
GL_Lib/src/primitives/: animation.cpp  animation.h  box.cpp  box.h  rectangle.cpp  shape.cpp  shape.h  sprite.cpp
GL_RenderingLib/: GL_RenderingLib.vcxproj
LibTester/: LibTester.vcxproj
Tester/: LitF.glsl  LitV.glsl  Tester.vcxproj  Tester.vcxproj.filters  solidColorLitF.glsl  solidColorLitV.glsl  solidColorV.glsl  textureF.glsl  textureV.glsl
Tester/src/: main.cpp  mainprev.cpp
Tester/src/Game/: Game.cpp  Game.h
(+19 files in other folders)
